--- a/whatistheplan/templates/home.html
+++ b/whatistheplan/templates/home.html
@@ -5,7 +5,7 @@
 {% block body_block %}
 <div class="row">
   <div class="col-md-offset-2 col-md-8">
-    <img src="{{ STATIC_URL }}/img/PLAN27BANNER.png" alt="PLAN 27" style="width:40%;height:auto;float:left;">
+    <img src="{{ STATIC_URL }}/img/PLAN28BANNER.png" alt="PLAN 28" style="width:40%;height:auto;float:left;">
     <h2 class="h2">What Is the PLAN?</h2>
     <hr>
     <p>PLAN (Parkview LAN Party) is a semiannual LAN Party Hosted by the Computer Club of Western Michigan University at the Parkview Engineering Campus.
@@ -16,9 +16,9 @@
     <a href="/signup/">Click here to sign up now!</a></p>
 
 
-    <p>Admission is $10 for the <b>whole weekend!</b> ($5 for Computer Club members)
+    <p>Admission is $10 for the <b>whole event!</b> ($5 for Computer Club members). We are now offering a discount for pre-registered groups as well!
 
-    <p>Please direct any questions to <a href="mailto:rso-computerclub@wmich.edu?Subject=PLAN27">Computer Club RSO Email</a>.
+    <p>Please direct any questions to <a href="mailto:rso-computerclub@wmich.edu?Subject=PLAN28">Computer Club RSO Email</a>.
 
     <p>Information about each event/tournament can be found <a href="./events/" shape="rect">here</a>.
   </div> <!-- end div.col-md-offset-2.col-md-2 -->
